# fingerd

./: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.BSD.in  Makefile.am  Makefile.compiler  Makefile.end  Makefile.inc  Makefile.internal  Makefile.main  NEWS  README  README.developers  README.wildcard  THANKS  ToDo  access.c  acconfig.h  configure.in  execute.c  fingerd.8  fingerd.8.in  fingerd.c  fingerd.h  fingerd2netbsd.sh  mdate-sh  misc.c  pathnames.h.in  rfc931.c  strdup.c  strerror.c  strtok.c  tcpd.h  version.c  wildcard.c
samples/: Makefile.am  access  config  fingerd.acl  fingerd.motd  fingerd.users  motd  users
