#
#	Makefile.am - for automake
#
#ident	"@(#)fingerd/src:$Name:  $:$Id: Makefile.am,v 1.2 1997/09/12 19:27:14 woods Exp $"

AUTOMAKE_OPTIONS = foreign no-dependencies cvs

# FIXME XXX What we really want is pkgsysconf_DATA,
# FIXME XXX but there's no support for it yet....
#
pkgdata_DATA = access config motd users
