#
#	Makefile.am - for automake
#
#ident	"@(#)fingerd/samples:$Name:  $:$Id: Makefile.am,v 1.3 1997/09/14 21:11:09 woods Exp $"

AUTOMAKE_OPTIONS = foreign no-dependencies cvs

# FIXME XXX What we really want is pkgsysconf_DATA,
# FIXME XXX but there's no support for it yet....
#
pkgdata_DATA = access config motd users
